--- a/Fashion/ClientApp/package.json
+++ b/Fashion/ClientApp/package.json
@@ -19,7 +19,9 @@
     "react-scripts": "^3.0.1",
     "reactstrap": "7.0.2",
     "redux": "4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "3.2.2"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/react-router": "4.4.3",
     "@types/react-router-dom": "4.3.1",
     "@types/reactstrap": "6.4.3",
+    "@types/redux-logger": "^3.0.7",
     "cross-env": "5.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-flowtype": "2.50.3",
